# TerminAI_V3

./: README.md  pyproject.toml  terminai.py
TerminAI/: main.py
TerminAI/GUI/: gui.py
TerminAI/data/: README.md
TerminAI/data/scraping/: man_page.sh  scrape.py
TerminAI/display/: gui.py
TerminAI/models/: generic_.py
TerminAI/utils/: config.py
docs/: setting_vertexai.md
tests/models/: test_generic_.py
